--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
  <property name="phpdox"  value="${basedir}/build/tools/phpdox.phar"/>
  <property name="phploc"  value="${basedir}/build/tools/phploc.phar"/>
  <property name="phpmd"   value="${basedir}/build/tools/phpmd.phar"/>
- <property name="phpunit" value="${basedir}/build/tools/phpunit"/>
+ <property name="phpunit" value="${basedir}/build/tools/phpunit.phar"/>
 
  <!-- Use this when the tools are managed by Composer in ${basedir}/vendor/bin
  <property name="pdepend" value="${basedir}/vendor/bin/pdepend"/>
